config/grand-oak-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grand-oak-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grand-oak-service
  template:
    metadata:
      labels:
        app: grand-oak-service
    spec:
      containers:
      - name: grand-oak-service
        image: nicholasliem/grand-oak-service:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: grand-oak-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: grand-oak-service
