config/pine-valley-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pine-valley-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pine-valley-service
  template:
    metadata:
      labels:
        app: pine-valley-service
    spec:
      containers:
      - name: pine-valley-service
        image: nicholasliem/pine-valley-service:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: pine-valley-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: pine-valley-service
